# C-Plus-Plus-Practice-HomeWorks

./: .gitignore  Adding-Operator+-Outside-Class.cpp  CMakeLists.txt  Class-Template-Specialization.cpp  README.md  Stack.cpp  Writing-Using-Ofstream.cpp  averages  averages.cpp  diamond.cpp  digits_sum_in_range.cpp  down_left_angled_triangle.cpp  even_odd.cpp  fibonacci.cpp  find_all_quadruples.cpp  find_nos.cpp  fourthDigit.cpp  fractional.cpp  homework1.cpp  homework2.cpp  homework3  homework3.cpp  homework4  homework4.cpp  homework5  homework5.cpp  isEven.cpp  is_prime.cpp  left_angled_triangle.cpp  line_of_character.cpp  min_of_values.cpp  minimum.cpp  minimum_3.cpp  multiplication_table.cpp  pair_of_numbers.cpp  print_primes.cpp  printing_x.cpp  remainder.cpp  reverse_number.cpp  simple_calc.cpp  (+8 more)
ASkMe-OOP/: AskMe.cpp  questions.txt  users.txt
Array-Of-Pointers/: 01.cpp  04.cpp
Array1D/: digit_frequency.cpp  find_3_min_values.cpp  find_most_frequent_number.cpp  fixed_sliding_window.cpp  is_increasing.cpp  palindrome.cpp  recaman's_sequence.cpp  replace_min_max.cpp  search_for_number.cpp  smallest_pair.cpp  sorting_numbers.cpp  unique_numbers_of_unordered_list.cpp  unique_numbers_ordered_list.cpp
AskMe/: AskMe.cpp
CharArray/: add_5555.cpp  application.cpp  compare_strings.cpp  compressing.cpp  convert_to_number.cpp  employee-program.cpp  grouping.cpp  is_prefix.cpp  is_subsequence.cpp  is_substring.cpp  is_suffix.cpp  letters_frequency.cpp
ExceptionHandling/: Catch-Integer.cpp  Catching-The-Exception.cpp  Guess-The-Output.cpp  Multiple-Exception-handling.cpp  Nested-Try-Catch.cpp  Nothrow.cpp  Stack-Unwinding.cpp  Throw-Exception.cpp  Throw-VS-Throw-e.cpp  Throwing-In-Constructor-Or-Destructor.cpp  Throwing-Integer.cpp  Vector-AT.cpp  noexcept-as-an-operator.cpp  noexcept-keyword.cpp  noexcept-with-exception.cpp
Expedia/: expedia_cusomter_mgr.h  expedia_customer.h  expedia_customer_view.h  expedia_flights_api.h  expedia_hotels_api.h  expedia_main.cpp  expedia_payments_api.h  expedia_user.h  expedia_user_mgr.h  expedia_utils.h
FilesAndStreams/: Appending.cpp  Input-String-Stream.cpp  Output-String-Stream.cpp  Read-2-Numbers-And-Sum.cpp  Reading-Using-Ifstream.cpp  Reading-Whole-FileContent.cpp  StringStream.cpp  Writing-Using-Ofstream.cpp  names.txt
HeadersAndIncludes/: Employee.cpp  Employee.h  EmployeeMain.cpp  Grouping-With-Namespaces.cpp  Nested-Namespaces-And-Alias.cpp  Using-Namespace.cpp  UsingKeyword.cpp  include.cpp  include2.cpp  sum.cpp  sum.h
Inheritance/: Constructors-Destructors.cpp  HW1-More-Features.cpp  HomeWork2.cpp  Homework1.cpp  Inheritance1.cpp  Inheritance2.cpp  Inheriting-Constructors.cpp  Member-Function-Override.cpp  Multilevel-Inheritance.cpp  Multiple-Inheritance.cpp  Overload-vs-Override.cpp  Prevent-Class-Inheritance.cpp  Private-Protected-Inheritance.cpp  ProtectedAccessModifier.cpp  STL-Exception-Hierarchy.cpp
Modern-Wrapper-Types/: Any1.cpp  Any2.cpp  Any3.cpp  Optional1-2.cpp  Optional1-3.cpp  Optional1-4.cpp  Optional1.cpp  Optional2-1.cpp  Optional2-2.cpp  Optional2-3.cpp  Optional2-4.cpp  Optional2-5.cpp  Optional3-1.cpp  Optional3-2.cpp  Optional3-3.cpp  Optional3-4.cpp  Optional3-5.cpp  Variant1.cpp  Variant2-1.cpp  Variant2-2.cpp  Variant2-3.cpp  Variant2-4.cpp  Variant2.cpp  Variant3.cpp  Variant4.cpp  Variant5.cpp
More-On-Pointers/: Void-Pointer.cpp
More-On-STL/: Accumulate.cpp  Adjacent-Difference.cpp  Any-Of.cpp  Array.cpp  Binary-Search.cpp  Container-Adaptors.cpp  Count.cpp  Find-If.cpp  ForeEach.cpp  Forward-List.cpp  List.cpp  Max-Element.cpp  Replace-If.cpp  Rotate-Shuffle.cpp  STD-Count.cpp  Search.cpp  Set-Operations.cpp  Stream-Iterators.cpp  Valarray.cpp
MultiDimensionalArray/: active_robot.cpp  enhanced-tic-tac-toe.cpp  find_mountains.cpp  flatten_3d_array.cpp  how_many_primes.cpp  smaller_row.cpp  tic_tac_toe.cpp  transpose.cpp  triangular_matrix.cpp
OOP/: Invoice.cpp  Invoice.h  InvoiceMain.cpp  Main.cpp  Quote.cpp  Rectangle.cpp  Rectangle.h
Online-Book-Reader/: main.cpp
Operator-Overloading/: Adding-Operator+-Outside-Class.cpp  Adding-Operator+.cpp  Assignment-Operator-Overloading.cpp  Conversions-In-Operator-Overloading.cpp  Conversions-In-Operator-Overloading2.cpp  HW1-Adding-Vectors.cpp  HW1_Operator&&.cpp  HW2-Multiplying-String.cpp  HW2-Our-Map.cpp  HW3-Double.cpp  HW3-Ordering-Pairs.cpp  HW4-ChessBoard.cpp  HW4-Ordering-Named-Pairs.cpp  Increment-Prefix-Postfix.cpp  Input-Output-Operator-Overloading.cpp  Input-Output-Operator-Overloading2.cpp  Input-Output-Operator-Overloading3.cpp  Relational-Operating-Overloading.cpp  Subscript-Operator-Set-Get.cpp  Subscript-Operator.cpp  Unary-Operator.cpp
Pointers/: Comparing-Pointers.cpp  Creating-Multiple-Elements.cpp  Destructor.cpp  Dynamic-memory-Allocation.cpp  Heap-Dynamic-Allocation.cpp  Iterating-Over-Array.cpp  Iterating-Over-Char-Array.cpp  Memory-Leak-Dangling-Pointer.cpp  Offset-Notation.cpp  Pass-Pointer-By-Reference.cpp  Pass-Pointer-To-Reference.cpp  Playing-With-Pointers.cpp  Pointer-To-Array.cpp  Pointer-To-Const.cpp  Pointer-To-Struct.cpp  Pointers-Arithmetic.cpp  Pointers-With-Other-Types.cpp  Preventing-Mistakes.cpp  Recursion.cpp  Reference-vs-Pointer.cpp  Return-Pointer.cpp  Stack-Overflow.cpp  Struct-Memory-Leak.cpp  pointers1.cpp
Polymorphism/: Device-Driver.cpp  DownCasting.cpp  ImageEditor.cpp  Interfaces.cpp  Package-Delivery.cpp  Polymorphism-Tips.cpp  Polymorphism1.cpp  Polymorphism3.cpp  Pure-Virtual-Function.cpp  Virtual-Function-vs-Template.cpp  Virtual-Function.cpp  polymorphism2.cpp
Projects/: Hospital-System-Using-Struct.cpp  Hospital-System.cpp  Library-System.cpp
RecursiveFunctions/: Array-Accumulation.cpp  Array-Average.cpp  Array-Increment.cpp  Array-Maximum.cpp  Array-Sum.cpp  Count-Primes.cpp  Fibonacci.cpp  Grid-Sum.cpp  Is-Palindrome.cpp  Is-Prefix.cpp  Left-Max.cpp  Length-3n-plus-1.cpp  Power.cpp  Prefix-Sum.cpp  Right-Max.cpp  Suffix-Sum.cpp  Trace.cpp  factorial.cpp  print-3n-plus-1-sequence.cpp  print-reversed-triangle.cpp  print-triangle.cpp
STL/: 2D-Vector.cpp  All-Words-Prefix.cpp  Map.cpp  (+39 more)
(+73 files in other folders)
