cmake_minimum_required(VERSION 3.26)
project(HomeWorks)

set(CMAKE_CXX_STANDARD 17)

add_executable(HomeWorks
        #        homework1.cpp
        #        homework2.cpp
        #        homework2.cpp
        #        homework3.cpp
        #        homework4.cpp
        #        homework5.cpp
        #        averages.cpp
        #        fractional.cpp
        #        remainder.cpp
        #        isEven.cpp
        #        sumLast3.cpp
        #        fourthDigit.cpp
        #        even_odd.cpp
        #        years.cpp
        #        simple_calc.cpp
        #        minimum.cpp
        #        minimum_3.cpp
        #        while_range.cpp
        #        line_of_character.cpp
        #        left_angled_triangle.cpp
        #        down_left_angled_triangle.cpp
        #        special_average.cpp
        #        diamond.cpp
        #        special_multiples.cpp
        #        special_multiples2.cpp
        #        min_of_values.cpp
        #        find_nos.cpp
        #        reverse_number.cpp
        #        multiplication_table.cpp
        #        special_sum.cpp
        #        pair_of_numbers.cpp
        #        fibonacci.cpp
        #        printing_x.cpp
        #        special_pairs.cpp
        #        find_all_quadruples.cpp
        #        is_prime.cpp
        #        print_primes.cpp
        #        digits_sum_in_range.cpp
        #        Array1D/is_increasing.cpp
        #        Array1D/replace_min_max.cpp
        #        Array1D/unique_numbers_ordered_list.cpp
        #        Array1D/palindrome.cpp
        #        Array1D/smallest_pair.cpp
        #        Array1D/find_3_min_values.cpp
        #        Array1D/search_for_number.cpp
        #        Array1D/find_most_frequent_number.cpp
        #        Array1D/digit_frequency.cpp
        #        Array1D/unique_numbers_of_unordered_list.cpp
#        Array1D/sorting_numbers.cpp
#        Array1D/recaman's_sequence.cpp
#        Array1D/fixed_sliding_window.cpp
#        CharArray/letters_frequency.cpp
#        CharArray/is_prefix.cpp
#        CharArray/is_suffix.cpp
#        CharArray/is_substring.cpp
#        CharArray/is_subsequence.cpp
#        CharArray/convert_to_number.cpp
#        CharArray/grouping.cpp
#        CharArray/compressing.cpp
        CharArray/compare_strings.cpp
)
