cmake_minimum_required(VERSION 3.26)
project(HomeWorks)

set(CMAKE_CXX_STANDARD 17)

add_executable(HomeWorks
        #        homework1.cpp
        #        homework2.cpp
        #        homework2.cpp
        #        homework3.cpp
        #        homework4.cpp
        #        homework5.cpp
        #        averages.cpp
        #        fractional.cpp
        #        remainder.cpp
        #        isEven.cpp
        #        sumLast3.cpp
        #        fourthDigit.cpp
        #        even_odd.cpp
        #        years.cpp
        #        simple_calc.cpp
        #        minimum.cpp
        #        minimum_3.cpp
        #        while_range.cpp
        #        line_of_character.cpp
        #        left_angled_triangle.cpp
        #        down_left_angled_triangle.cpp
        #        special_average.cpp
        #        diamond.cpp
        #        special_multiples.cpp
        #        special_multiples2.cpp
        #        min_of_values.cpp
        #        find_nos.cpp
        #        reverse_number.cpp
        #        multiplication_table.cpp
        #        special_sum.cpp
        #        pair_of_numbers.cpp
        #        fibonacci.cpp
        #        printing_x.cpp
        #        special_pairs.cpp
        #        find_all_quadruples.cpp
        #        is_prime.cpp
        #        print_primes.cpp
        #        digits_sum_in_range.cpp
        #        Array1D/is_increasing.cpp
        #        Array1D/replace_min_max.cpp
        #        Array1D/unique_numbers_ordered_list.cpp
        #        Array1D/palindrome.cpp
        #        Array1D/smallest_pair.cpp
        #        Array1D/find_3_min_values.cpp
        #        Array1D/search_for_number.cpp
        #        Array1D/find_most_frequent_number.cpp
        #        Array1D/digit_frequency.cpp
        #        Array1D/unique_numbers_of_unordered_list.cpp
        #        Array1D/sorting_numbers.cpp
        #        Array1D/recaman's_sequence.cpp
        #        Array1D/fixed_sliding_window.cpp
        #        CharArray/letters_frequency.cpp
        #        CharArray/is_prefix.cpp
        #        CharArray/is_suffix.cpp
        #        CharArray/is_substring.cpp
        #        CharArray/is_subsequence.cpp
        #        CharArray/convert_to_number.cpp
        #        CharArray/grouping.cpp
        #        CharArray/compressing.cpp
        #        CharArray/compare_strings.cpp
        #        CharArray/add_5555.cpp
        #        CharArray/employee-program.cpp
        #        MultiDimensionalArray/smaller_row.cpp
        #        MultiDimensionalArray/triangular_matrix.cpp
        #        MultiDimensionalArray/transpose.cpp
        #        MultiDimensionalArray/how_many_primes.cpp
        #        MultiDimensionalArray/find_mountains.cpp
        #        MultiDimensionalArray/active_robot.cpp
        #        MultiDimensionalArray/flatten_3d_array.cpp
        #        MultiDimensionalArray/tic_tac_toe.cpp
        #        MultiDimensionalArray/enhanced-tic-tac-toe.cpp
        #        functions/sum1-to-n.cpp
        #        functions/absolute.cpp
        #        functions/maximum-of-2-numbers.cpp
        #        functions/max_of_absolute_2_numbers.cpp
        #        functions/function-without-return-value.cpp
        #        functions/function-with-default-value.cpp
        #        functions/parameter-casting.cpp
        #        functions/function-overloading.cpp
        #        functions/pass-by-reference.cpp
        #        functions/pass-array-by-reference-is-default.cpp
        #        functions/is-lower-string.cpp
        #        functions/built-in-functions.cpp
        #        functions/employee-program-v2.cpp
        #        functions/max-of-6-numbers.cpp
        #        functions/reverse_string.cpp
        #        functions/simple-calculator.cpp
        #        functions/is-palindrome-array.cpp
        #        functions/set-powers.cpp
        #        functions/get-nth-prime.cpp
        #        functions/replace-substring.cpp
        #        RecursiveFunctions/factorial.cpp
        #        RecursiveFunctions/print-triangle.cpp
        #        RecursiveFunctions/print-reversed-triangle.cpp
        #        RecursiveFunctions/print-3n-plus-1-sequence.cpp
        #        RecursiveFunctions/Length-3n-plus-1.cpp
        #        RecursiveFunctions/Power.cpp
        #        RecursiveFunctions/Array-Maximum.cpp
        #        RecursiveFunctions/Array-Sum.cpp
        #        RecursiveFunctions/Array-Average.cpp
        #        RecursiveFunctions/Array-Increment.cpp
        #        RecursiveFunctions/Array-Accumulation.cpp
        #        RecursiveFunctions/Left-Max.cpp
        #        RecursiveFunctions/Right-Max.cpp
        #        RecursiveFunctions/Suffix-Sum.cpp
        #        RecursiveFunctions/Prefix-Sum.cpp
        #        RecursiveFunctions/Is-Palindrome.cpp
        #        RecursiveFunctions/Is-Prefix.cpp
        #        RecursiveFunctions/Trace.cpp
        #        RecursiveFunctions/Count-Primes.cpp
        #        RecursiveFunctions/Grid-Sum.cpp
        #        RecursiveFunctions/Fibonacci.cpp
        #        Projects/Hospital-System.cpp
        #        Struct/Employee.cpp
        #        Struct/Ordering-Array.cpp
        #        Struct/Structure-Of_Structure.cpp
        #        Struct/Constructor.cpp
        #        Struct/Queue.cpp
        #        Projects/Hospital-System-Using-Struct.cpp
        #        Projects/Library-System.cpp
        #        Templates/Generic-Programming-Using-Templates.cpp
        #        Templates/Template-With-Multiple-Types.cpp
        #        Templates/Static-Variable.cpp
        #        Templates/Template-Function-Specialization.cpp
        #        Templates/Class-Templates.cpp
        #        Templates/Templates-Non-Type-Parameters.cpp
        #        Class-Template-Specialization.cpp
        #        STL/Queue.cpp
        #        STL/Priority-Queue.cpp
        #        STL/Deque.cpp
        #        STL/Is-Palindrome-Using-Dequeue.cpp
        #        Stack.cpp
        #        STL/Sum-Of-Last-K-Numbers.cpp
        #        STL/Pair.cpp
        #        STL/Tuple.cpp
        #        STL/Deque-With-Iterator.cpp
        #        STL/Iterator-Arithmetic.cpp
        #        STL/String-Iterator.cpp
        #        STL/Auto.cpp
        #        STL/CPlusPlus11-Iterating-Style.cpp
        #        STL/Vector.cpp
        #        STL/2D-Vector.cpp
        #        STL/String.cpp
        #        STL/Max-Sum-Of-Vectors.cpp
        #        STL/Sort-Algorithm.cpp
        #        STL/Reverse-Algorithm.cpp
        #        STL/Set.cpp
        #        STL/MultiSet.cpp
        #        STL/Struct-Comparison.cpp
        #        STL/Unordered-Set.cpp
        #        STL/Map.cpp
        #        STL/Map2.cpp
        #        STL/Validate-Parentheses.cpp
        #        STL/Find-Full-Names.cpp
        #        STL/Max-Sliding_window.cpp
        #        STL/Score-Of-Parentheses.cpp
        #        STL/Asteroid-Collision.cpp
        #        STL/Next-Greater-Num.cpp
        #        STL/Structured-Binding.cpp
        #        STL/Structure-Binding-With-Struct.cpp
        #        STL/Structured-Binding-With-Pair.cpp
        #        STL/Structured-Binding-With-Tuples.cpp
        STL/Structured-Binging-With-Map.cpp
)
