cmake_minimum_required(VERSION 3.27)
project(HomeWorks)

set(CMAKE_CXX_STANDARD 17)

add_executable(HomeWorks
        #        homework1.cpp
        #        homework2.cpp
        #        homework2.cpp
        #        homework3.cpp
        #        homework4.cpp
        #        homework5.cpp
        #        averages.cpp
        #        fractional.cpp
        #        remainder.cpp
        #        isEven.cpp
        #        sumLast3.cpp
        #        fourthDigit.cpp
        #        even_odd.cpp
        #        years.cpp
        #        simple_calc.cpp
        #        minimum.cpp
        #        minimum_3.cpp
        #        while_range.cpp
        #        line_of_character.cpp
        #        left_angled_triangle.cpp
        #        down_left_angled_triangle.cpp
        #        special_average.cpp
        #        diamond.cpp
        #        special_multiples.cpp
        #        special_multiples2.cpp
        #        min_of_values.cpp
        #        find_nos.cpp
        #        reverse_number.cpp
        #        multiplication_table.cpp
        #        special_sum.cpp
        #        pair_of_numbers.cpp
        #        fibonacci.cpp
        #        printing_x.cpp
        #        special_pairs.cpp
        #        find_all_quadruples.cpp
        #        is_prime.cpp
        #        print_primes.cpp
        #        digits_sum_in_range.cpp
        #        Array1D/is_increasing.cpp
        #        Array1D/replace_min_max.cpp
        #        Array1D/unique_numbers_ordered_list.cpp
        #        Array1D/palindrome.cpp
        #        Array1D/smallest_pair.cpp
        #        Array1D/find_3_min_values.cpp
        #        Array1D/search_for_number.cpp
        #        Array1D/find_most_frequent_number.cpp
        #        Array1D/digit_frequency.cpp
        #        Array1D/unique_numbers_of_unordered_list.cpp
        #        Array1D/sorting_numbers.cpp
        #        Array1D/recaman's_sequence.cpp
        #        Array1D/fixed_sliding_window.cpp
        #        CharArray/letters_frequency.cpp
        #        CharArray/is_prefix.cpp
        #        CharArray/is_suffix.cpp
        #        CharArray/is_substring.cpp
        #        CharArray/is_subsequence.cpp
        #        CharArray/convert_to_number.cpp
        #        CharArray/grouping.cpp
        #        CharArray/compressing.cpp
        #        CharArray/compare_strings.cpp
        #        CharArray/add_5555.cpp
        #        CharArray/employee-program.cpp
        #        MultiDimensionalArray/smaller_row.cpp
        #        MultiDimensionalArray/triangular_matrix.cpp
        #        MultiDimensionalArray/transpose.cpp
        #        MultiDimensionalArray/how_many_primes.cpp
        #        MultiDimensionalArray/find_mountains.cpp
        #        MultiDimensionalArray/active_robot.cpp
        #        MultiDimensionalArray/flatten_3d_array.cpp
        #        MultiDimensionalArray/tic_tac_toe.cpp
        #        MultiDimensionalArray/enhanced-tic-tac-toe.cpp
        #        functions/sum1-to-n.cpp
        #        functions/absolute.cpp
        #        functions/maximum-of-2-numbers.cpp
        #        functions/max_of_absolute_2_numbers.cpp
        #        functions/function-without-return-value.cpp
        #        functions/function-with-default-value.cpp
        #        functions/parameter-casting.cpp
        #        functions/function-overloading.cpp
        #        functions/pass-by-reference.cpp
        #        functions/pass-array-by-reference-is-default.cpp
        #        functions/is-lower-string.cpp
        #        functions/built-in-functions.cpp
        #        functions/employee-program-v2.cpp
        #        functions/max-of-6-numbers.cpp
        #        functions/reverse_string.cpp
        #        functions/simple-calculator.cpp
        #        functions/is-palindrome-array.cpp
        #        functions/set-powers.cpp
        #        functions/get-nth-prime.cpp
        #        functions/replace-substring.cpp
        #        RecursiveFunctions/factorial.cpp
        #        RecursiveFunctions/print-triangle.cpp
        #        RecursiveFunctions/print-reversed-triangle.cpp
        #        RecursiveFunctions/print-3n-plus-1-sequence.cpp
        #        RecursiveFunctions/Length-3n-plus-1.cpp
        #        RecursiveFunctions/Power.cpp
        #        RecursiveFunctions/Array-Maximum.cpp
        #        RecursiveFunctions/Array-Sum.cpp
        #        RecursiveFunctions/Array-Average.cpp
        #        RecursiveFunctions/Array-Increment.cpp
        #        RecursiveFunctions/Array-Accumulation.cpp
        #        RecursiveFunctions/Left-Max.cpp
        #        RecursiveFunctions/Right-Max.cpp
        #        RecursiveFunctions/Suffix-Sum.cpp
        #        RecursiveFunctions/Prefix-Sum.cpp
        #        RecursiveFunctions/Is-Palindrome.cpp
        #        RecursiveFunctions/Is-Prefix.cpp
        #        RecursiveFunctions/Trace.cpp
        #        RecursiveFunctions/Count-Primes.cpp
        #        RecursiveFunctions/Grid-Sum.cpp
        #        RecursiveFunctions/Fibonacci.cpp
        #        Projects/Hospital-System.cpp
        #        Struct/Employee.cpp
        #        Struct/Ordering-Array.cpp
        #        Struct/Structure-Of_Structure.cpp
        #        Struct/Constructor.cpp
        #        Struct/Queue.cpp
        #        Projects/Hospital-System-Using-Struct.cpp
        #        Projects/Library-System.cpp
        #        Templates/Generic-Programming-Using-Templates.cpp
        #        Templates/Template-With-Multiple-Types.cpp
        #        Templates/Static-Variable.cpp
        #        Templates/Template-Function-Specialization.cpp
        #        Templates/Class-Templates.cpp
        #        Templates/Templates-Non-Type-Parameters.cpp
        #        Class-Template-Specialization.cpp
        #        STL/Queue.cpp
        #        STL/Priority-Queue.cpp
        #        STL/Deque.cpp
        #        STL/Is-Palindrome-Using-Dequeue.cpp
        #        Stack.cpp
        #        STL/Sum-Of-Last-K-Numbers.cpp
        #        STL/Pair.cpp
        #        STL/Tuple.cpp
        #        STL/Deque-With-Iterator.cpp
        #        STL/Iterator-Arithmetic.cpp
        #        STL/String-Iterator.cpp
        #        STL/Auto.cpp
        #        STL/CPlusPlus11-Iterating-Style.cpp
        #        STL/Vector.cpp
        #        STL/2D-Vector.cpp
        #        STL/String.cpp
        #        STL/Max-Sum-Of-Vectors.cpp
        #        STL/Sort-Algorithm.cpp
        #        STL/Reverse-Algorithm.cpp
        #        STL/Set.cpp
        #        STL/MultiSet.cpp
        #        STL/Struct-Comparison.cpp
        #        STL/Unordered-Set.cpp
        #        STL/Map.cpp
        #        STL/Map2.cpp
        #        STL/Validate-Parentheses.cpp
        #        STL/Find-Full-Names.cpp
        #        STL/Max-Sliding_window.cpp
        #        STL/All-Words-Prefix.cpp
        #        STL/Score-Of-Parentheses.cpp
        #        STL/Asteroid-Collision.cpp
        #        STL/Next-Greater-Num.cpp
        #        STL/Structured-Binding.cpp
        #        STL/Structure-Binding-With-Struct.cpp
        #        STL/Structured-Binding-With-Pair.cpp
        #        STL/Structured-Binding-With-Tuples.cpp
        #        STL/Structured-Binging-With-Map.cpp
        #        STL/Structure-Binding-With-Insertion.cpp
        #        STL/More-On-Initialization.cpp
        #        STL/Struct-With-Array.cpp
        #        FilesAndStreams/Read-2-Numbers-And-Sum.cpp
        #        FilesAndStreams/Reading-Using-Ifstream.cpp
        #        FilesAndStreams/Writing-Using-Ofstream.cpp
        #        FilesAndStreams/Appending.cpp
        #        FilesAndStreams/Reading-Whole-FileContent.cpp
        #        FilesAndStreams/StringStream.cpp
        #        AskMe/AskMe.cpp
        #        Pointers/pointers1.cpp
        #        Pointers/Playing-With-Pointers.cpp
        #        Pointers/Pointers-With-Other-Types.cpp
        #        Pointers/Pointer-To-Array.cpp
        #        Pointers/Offset-Notation.cpp
        #        Pointers/Pointers-Arithmetic.cpp
        #        Pointers/Iterating-Over-Array.cpp
        #        Pointers/Iterating-Over-Char-Array.cpp
        #        Pointers/Comparing-Pointers.cpp
        #        Pointers/Pointer-To-Const.cpp
        #        Pointers/Pass-Pointer-By-Reference.cpp
        #        Pointers/Return-Pointer.cpp
        #        Pointers/Pass-Pointer-To-Reference.cpp
        #        Pointers/Reference-vs-Pointer.cpp
        #        Pointers/Dynamic-memory-Allocation.cpp
        #        Pointers/Creating-Multiple-Elements.cpp
        #        Pointers/Pointer-To-Struct.cpp
        #        Pointers/Stack-Overflow.cpp
        #        Pointers/Recursion.cpp
        #        Pointers/Heap-Dynamic-Allocation.cpp
        #        Pointers/Struct-Memory-Leak.cpp
        #        Pointers/Destructor.cpp
        #        Pointers/Memory-Leak-Dangling-Pointer.cpp
        #        Pointers/Preventing-Mistakes.cpp
        #        HeadersAndIncludes/include.cpp
        #        HeadersAndIncludes/sum.h
        #        HeadersAndIncludes/sum.cpp
        #        HeadersAndIncludes/include2.cpp
        #        HeadersAndIncludes/Employee.h
        #        HeadersAndIncludes/Employee.cpp
        #        HeadersAndIncludes/EmployeeMain.cpp
        #        HeadersAndIncludes/CircularRelationships/Employee.h
        #        HeadersAndIncludes/CircularRelationships/Department.h
        #        HeadersAndIncludes/CircularRelationships/Department.cpp
        #        HeadersAndIncludes/CircularRelationships/Employee.cpp
        #        HeadersAndIncludes/CircularRelationships/main.cpp
        #        HeadersAndIncludes/Grouping-With-Namespaces.cpp
        #        HeadersAndIncludes/UsingKeyword.cpp
        #        HeadersAndIncludes/Using-Namespace.cpp
        #        HeadersAndIncludes/Nested-Namespaces-And-Alias.cpp
        #        ExceptionHandling/Throw-Exception.cpp
        #        ExceptionHandling/Vector-AT.cpp
        #        ExceptionHandling/Catching-The-Exception.cpp
        #        ExceptionHandling/Multiple-Exception-handling.cpp
        #        ExceptionHandling/Throwing-Integer.cpp
        #        ExceptionHandling/Catch-Integer.cpp
        #        ExceptionHandling/Nested-Try-Catch.cpp
        #        ExceptionHandling/Stack-Unwinding.cpp
        #        ExceptionHandling/Throwing-In-Constructor-Or-Destructor.cpp
        #        ExceptionHandling/Throw-VS-Throw-e.cpp
        #        ExceptionHandling/noexcept-keyword.cpp
        #        ExceptionHandling/noexcept-with-exception.cpp
        #        ExceptionHandling/noexcept-as-an-operator.cpp
        #        ExceptionHandling/Guess-The-Output.cpp
        #        ExceptionHandling/Nothrow.cpp
        #        OOP/Quote.cpp
        #        OOP/Rectangle.h
        #        OOP/Rectangle.cpp
        #        OOP/Main.cpp
        #        OOP/Invoice.cpp
        #        OOP/Invoice.h
        #        OOP/InvoiceMain.cpp
        #        ASkMe-OOP/AskMe.cpp
        #        Online-Book-Reader/main.cpp
        #        Inheritance/Inheritance1.cpp
        #        Inheritance/Inheritance2.cpp
        #        Inheritance/ProtectedAccessModifier.cpp
        #        Inheritance/Multiple-Inheritance.cpp
        #        Inheritance/Multilevel-Inheritance.cpp
        #        Inheritance/Homework1.cpp
        #        Inheritance/HomeWork2.cpp
        #        Inheritance/HW1-More-Features.cpp
        #        Inheritance/Constructors-Destructors.cpp
        #        Inheritance/Member-Function-Override.cpp
        #        Inheritance/Inheriting-Constructors.cpp
        #        Inheritance/Prevent-Class-Inheritance.cpp
        #        Inheritance/Overload-vs-Override.cpp
        #        Inheritance/Private-Protected-Inheritance.cpp
        #        Inheritance/STL-Exception-Hierarchy.cpp
        #        Polymorphism/Polymorphism1.cpp
        #        Polymorphism/Virtual-Function.cpp
        #        Polymorphism/polymorphism2.cpp
        #        Polymorphism/Polymorphism3.cpp
        #        Polymorphism/Package-Delivery.cpp
        #        Polymorphism/ImageEditor.cpp
        #        Polymorphism/Polymorphism-Tips.cpp
        #        Polymorphism/Pure-Virtual-Function.cpp
        #        Polymorphism/Interfaces.cpp
        #        Polymorphism/Virtual-Function-vs-Template.cpp
        #        Polymorphism/Device-Driver.cpp
        #        Polymorphism/DownCasting.cpp
        #        Operator-Overloading/Adding-Operator+.cpp
        #        Operator-Overloading/Adding-Operator+-Outside-Class.cpp
        #        Operator-Overloading/Unary-Operator.cpp
        #        Operator-Overloading/Subscript-Operator.cpp
        #        Operator-Overloading/Subscript-Operator-Set-Get.cpp
        #        Operator-Overloading/Relational-Operating-Overloading.cpp
        #        Operator-Overloading/HW1-Adding-Vectors.cpp
        #        Operator-Overloading/HW2-Multiplying-String.cpp
        #        Operator-Overloading/HW3-Ordering-Pairs.cpp
        #        Operator-Overloading/HW4-Ordering-Named-Pairs.cpp
        #        Operator-Overloading/HW1_Operator&&.cpp
        #        Operator-Overloading/HW2-Our-Map.cpp
        #        Operator-Overloading/HW3-Double.cpp
        #        Operator-Overloading/HW4-ChessBoard.cpp
        #        Operator-Overloading/Increment-Prefix-Postfix.cpp
        #        Operator-Overloading/Input-Output-Operator-Overloading.cpp
        #        Operator-Overloading/Input-Output-Operator-Overloading2.cpp
        #        Operator-Overloading/Input-Output-Operator-Overloading3.cpp
        #        Operator-Overloading/Conversions-In-Operator-Overloading.cpp
        #        Operator-Overloading/Conversions-In-Operator-Overloading2.cpp
        #        Operator-Overloading/Assignment-Operator-Overloading.cpp
        #        Expedia/expedia_main.cpp
        #        Smart-Pointers/Unique-Pointers1.cpp
        #        Smart-Pointers/Copy-Constructor-vs-Moving.cpp
        #        Smart-Pointers/Addresses.cpp
        #        Smart-Pointers/Pass-To-Function.cpp
        #        Smart-Pointers/Return-From-Function.cpp
        #        Smart-Pointers/make_unique-Helper-Function.cpp
        #        Smart-Pointers/Pointer-To-Array.cpp
        #        Smart-Pointers/Unique-Pointers-With-Vector.cpp
        #        Smart-Pointers/Unique-Pointers-Release.cpp
        #        Smart-Pointers/Shared-Pointers.cpp
        #        Smart-Pointers/Shared-count.cpp
        #        Smart-Pointers/Shared-Pointers-With-Vector.cpp
        #        Smart-Pointers/DownCasting-Shared-vs-Unique.cpp
        #        Smart-Pointers/Circular-Dependency.cpp
        #        Smart-Pointers/Using-Weak-Pointer.cpp
        #        Smart-Pointers/Weak-Pointer-Lock-Expired.cpp
        #        Smart-Pointers/Weak-Pointer-Concurrency-Issue.cpp
        #        Smart-Pointers/Weak-Pointer-Concurrency-Issue-Fixed.cpp
        #        Smart-Pointers/Weak-Pointer-Concurrency-Proper-Way.cpp
        #        Smart-Pointers/Custom-Deleter-For-Shared-Pointer.cpp
        #        Smart-Pointers/Legacy-Code.cpp
        #        Smart-Pointers/Shared-Pointer-To-Array.cpp
        #        Smart-Pointers/Shared-Pointer-To-Array-Generic.cpp
        #        Smart-Pointers/Custom-Deleter-For-Unique-Pointer.cpp
        #        Smart-Pointers/decltype.cpp
        #        Smart-Pointers/Custom-Deleter-For-Unique-Pointer2.cpp
        #        Smart-Pointers/Custom-Deleter-For-Unique-Pointer-Typedef.cpp
        #        Smart-Pointers/Different-Memory-Allocations.cpp
        #        More-On-STL/Any-Of.cpp
        #        More-On-STL/Max-Element.cpp
        #        More-On-STL/Find-If.cpp
        #        More-On-STL/Count.cpp
        #        More-On-STL/STD-Count.cpp
        #        More-On-STL/Replace-If.cpp
        #        More-On-STL/Search.cpp
        #        More-On-STL/ForeEach.cpp
        #        More-On-STL/Accumulate.cpp
        #        More-On-STL/Adjacent-Difference.cpp
        #        More-On-STL/Rotate-Shuffle.cpp
        #        More-On-STL/Binary-Search.cpp
        #        More-On-STL/Set-Operations.cpp
        #        More-On-STL/Array.cpp
        #        More-On-STL/List.cpp
        #        More-On-STL/Forward-List.cpp
        #        More-On-STL/Valarray.cpp
        #        More-On-STL/Container-Adaptors.cpp
        #        More-On-STL/Stream-Iterators.cpp
        #        Modern-Wrapper-Types/Optional1-1.cpp
        #        Modern-Wrapper-Types/Optional1-2.cpp
        #        Modern-Wrapper-Types/Optional1-3.cpp
        #        Modern-Wrapper-Types/Optional1-4.cpp
        #        Modern-Wrapper-Types/Optional2-1.cpp
        #        Modern-Wrapper-Types/Optional2-2.cpp
        #        Modern-Wrapper-Types/Optional2-3.cpp
        #        Modern-Wrapper-Types/Optional2-4.cpp
        #        Modern-Wrapper-Types/Optional2-5.cpp
        #        Modern-Wrapper-Types/Optional3-1.cpp
        #        Modern-Wrapper-Types/Optional3-2.cpp
        #        Modern-Wrapper-Types/Optional3-3.cpp
        #        Modern-Wrapper-Types/Optional3-4.cpp
        #        Modern-Wrapper-Types/Optional3-5.cpp
        #        Modern-Wrapper-Types/Variant1.cpp
        #        Modern-Wrapper-Types/Variant2.cpp
        #        Modern-Wrapper-Types/Variant3.cpp
        #        Modern-Wrapper-Types/Variant4.cpp
        #        Modern-Wrapper-Types/Variant5.cpp
        #        Modern-Wrapper-Types/Variant2-1.cpp
        #        Modern-Wrapper-Types/Variant2-2.cpp
        #        Modern-Wrapper-Types/Variant2-3.cpp
        #        Modern-Wrapper-Types/Variant2-4.cpp
        Modern-Wrapper-Types/Any1.cpp
        Modern-Wrapper-Types/Any2.cpp
)